@@ -1,0 +1,5 @@
+themedir = $(datadir)/themes/Redmond/gtk
+theme_DATA = gtkrc
+
+EXTRA_DIST = $(theme_DATA)
+
